# autogen_storm_research

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Procfile  README.md  app.yaml  app_interactive.py  batch_run.py  cloudbuild.yaml  deploy.sh  main.py  parallel_storm_research_LLM_추론_최적화를_위한_Groq_LPU와_NVIDIA_GPU_비교_분석.md  pyproject.toml  railway.json  render.yaml  requirements.txt  run-all.sh  setup_check.py  simple_run.py  start.sh  stop-all.sh  stop.sh  storm_research.py  test_api_request.py  test_imports.py  test_interactive_client.py  test_websocket.py  usage_guide.sh
autogen_storm/: __init__.py  agents.py  config.py  models.py  tools.py  tracing.py  workflow.py
deploy/: README.md  env-setup.sh
frontend/: package-lock.json  package.json  start.sh  stop.sh  vercel.json
frontend/src/app/: page.tsx
frontend/src/app/architecture/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/research/progress/: page.tsx
frontend/src/app/research/result/[sessionId]/: page.tsx
frontend/src/app/versions/: page.tsx
frontend/src/components/layout/: header.tsx
frontend/src/components/research/: enhanced-progress.tsx  feedback-dialogs.tsx  research-form.tsx
frontend/src/components/ui/: aurora-text.tsx
frontend/src/store/: research-store.ts
frontend/src/types/: index.ts
scripts/: deploy-backend.sh  deploy-frontend.sh
